2006-01-13  Bastien Nocera  <hadess@hadess.net>

	* data/schemas.sh: don't create a schema entry for ogm files
	(work-around #326870)

2006-01-11  Bastien Nocera  <hadess@hadess.net>

	* src/totem-preferences.c: (totem_setup_preferences): set the prefs
	window as transient for the main window (Closes: #324155)

2006-01-11  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: add support for the video/x-ogm+ogg mime-type

2006-01-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-plugin.cpp: use the *right* fix for the Mozilla
	double init problem

2006-01-10  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd

2006-01-09  Bastien Nocera  <hadess@hadess.net>

	* src/backend/video-utils.c:
	(totem_gdk_window_set_invisible_cursor): Fix warning on exit
	when hiding the cursor

2006-01-09  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: add Flash Video support

2006-01-09  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-plugin.cpp: make the Totem plugin resident in
	memory to avoid re-registering its type via dbus-glib, fixes
	crashes when viewing some videos a second time, with help from
	Christian Persch <chpe@cvs.gnome.org> (Closes: #324352)

2006-01-08  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.in:
	  Print result after checking for NVTV.

2006-01-06  Bastien Nocera  <hadess@hadess.net>

	* src/egg-recent-model.c: (parse_info_init), (parse_info_free),
	(end_element_handler), (egg_recent_model_filter),
	(egg_recent_model_read), (egg_recent_model_lock_file),
	(egg_recent_model_unlock_file), (egg_recent_model_get_list):
	* src/egg-recent-view-gtk.c: (egg_recent_view_gtk_clear): update
	from CVS libegg

2006-01-02  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c:
	(my_gnome_vfs_get_mime_type_with_data): fix parsing of directories

2005-12-22  Bastien Nocera  <hadess@hadess.net>

	* configure.in: exit if xine-lib isn't available, and GStreamer
	is disabled (Closes: #324785)
