@@ -1,3 +1,9 @@
+2006-01-14  William Jon McCann  <mccann@jhu.edu>
+
+	* src/totem-scrsaver.c: Use DBUS glib bindings.
+	Fallback to trying the old gnome-screensaver
+	interface name.  (Closes: #326495)
+
 2006-01-13  Bastien Nocera  <hadess@hadess.net>
 
 	* data/schemas.sh: don't create a schema entry for ogm files
